This is phplotdocs/ChangeLog, listing changes to the PHPlot Reference Manual
-----------------------------------------------------------------------------
Note: This is a more complete ChangeLog than the one in Appendix A of the
manual, which only contains summaries of changes.
-----------------------------------------------------------------------------

2011-07-30
   For release with PHPlot-5.5.0 (no changes)

2011-07-28
   For feature request #3352301 "Bubble plots":
   * Makefile: Add files for new example.
   * advanced.xml: Add new tuning parameters for bubble plots.
   * concepts.xml: New data type and plot type for bubble plots.
   * developer.xml: New internal function DrawBubbles.
   * examples.xml: New example of bubbles plot.
   * examples/bubbles1.php: New example
   * variables.list: New class variables for X/Y/Z data and bubble plots.

2011-07-26
   * reference.xml: In SetBgImage and SetPlotAreaBgImage, add a note advising
     use of PHPlot truecolor images whenever using a JPEG (or high-color PNG)
     background image, to avoid color map overflow.

2011-07-24
   For feature request #3374495 "Data URL encoding":
   * Makefile: Add new example script and static image (this example
     does not generate an image file, so Makefile can't build it).
   * concepts.xml: Overview - add note on embedding image. Error
     Handling - add information on disabling the error image.
   * developer.xml: Add internal function GetImageType.
   * examples.xml: Add new example for EncodeImage
   * examples/encodeimage.php images/encodeimage.png : New example
   * functions.xml: Add links to 2 new functions
   * reference.xml: Document 2 new functions EncodeImage, SetFailureImage.
       Update SetPrintImage re: new EncodeImage.
   * variables.list: Add new member variable suppress_error_image

2011-07-21
   * main.xml: Indicate next version PHPlot-5.5.0
   * .ispell_words: Updated spelling list

   For bug #3370548 "Reverse legend line order for stackedbars":